--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: scala
 jdk: openjdk8
 
 scala:
-   - 2.11.12
    - 2.12.10
 
 script:
-   - sbt ++$TRAVIS_SCALA_VERSION test
+   - sbt +test
