--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ cache:
 
 before_cache:
   - rm -fv $HOME/.ivy2/.sbt.ivy.lock
+  - rm -Rf $HOME/.sbt
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
   - find $HOME/.sbt        -name "*.lock"               -print -delete
