--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ cache:
 
 before_cache:
   - rm -fv $HOME/.ivy2/.sbt.ivy.lock
-  - rm -Rf $HOME/.sbt
+  - rm -Rf $HOME/.cache
+  - rm -Rf $HOME/.ivy2
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
   - find $HOME/.sbt        -name "*.lock"               -print -delete
