--- a/.github/workflows/quneys-dsl-githubactions.yml
+++ b/.github/workflows/quneys-dsl-githubactions.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Build and test scala version
         run: |
           PGPASSWORD="postgres" psql -c 'create database almaren;' -U postgres -h localhost 
-          PGPASSWORD="postgres" psql -c "ALTER USER postgres PASSWORD 'postgres' ;" -U postgres -h localhost 
+          PGPASSWORD="postgres" psql -c "ALTER USER postgres PASSWORD 'foo' ;" -U postgres -h localhost 
           PGPASSWORD="postgres" psql -c 'create role runner;' -U postgres -h localhost
-          PGPASSWORD="postgres" psql -h localhost -U postgres -d almaren -f src/test/resources/tables.ddl
+          PGPASSWORD="postgres" psql -c 'ALTER ROLE "runner" WITH  LOGIN SUPERUSER INHERIT CREATEDB CREATEROLE REPLICATION;' -U postgres -h localhost
           sbt ++2.12.10 test
           sbt ++2.13.9 test
           rm -rf "$HOME/.ivy2/local" || true
